Fix drip icon on mobile, fix create account hover

--- a/app/assets/stylesheets/resource.scss
+++ b/app/assets/stylesheets/resource.scss
@@ -5,6 +5,15 @@
   padding: 0 20px;
 }
 
+.resources-nav-bar {
+  .logo-container {
+    img {
+      height: 61px;
+      width: 61px;
+    }
+  }
+}
+
 .left-text {
   font-style: italic;
   text-align: right;
@@ -13,6 +22,11 @@
     color: $white;
     text-decoration: underline;
   }
+}
+
+
+@media screen and (max-width: 600px){
+
 }
 
 @import 'fabrics';
